--- a/GCard/payment/templates/payment/home.html
+++ b/GCard/payment/templates/payment/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>G Card - Best Way To ECommerce</title>
 </head>
 <body>
 
