--- a/GCard/payment/templates/payment/product_list.html
+++ b/GCard/payment/templates/payment/product_list.html
@@ -5,6 +5,10 @@
     <title>Title</title>
 </head>
 <body>
+<h1>PRODUCTS</h1>
 
+{%for obj in object_list %}
+    {{obj.title}}
+{% endfor %}
 </body>
 </html>
