--- a/GCard/payment/templates/payment/home.html
+++ b/GCard/payment/templates/payment/home.html
@@ -6,9 +6,10 @@
 </head>
 <body>
 <h1>PRODUCTS</h1>
-
+<ul>
 {%for obj in object_list %}
-    {{obj.title}}
+    <li><a href="{% url "product_detail_list" pk=obj.pk %}">{{obj.title}}</a> </li>
 {% endfor %}
+</ul>
 </body>
 </html>
