--- a/GCard/payment/templates/payment/product_detail.html
+++ b/GCard/payment/templates/payment/product_detail.html
@@ -5,6 +5,7 @@
         </title>
     </head>
     <body>
+        <img src="{{ object.image }}">
         <div id="title">Product Name: {{ object.title }}</div>
         <div id="desc">Product Description: <p>{{ object.desc }}</p></div>
         <div id="price">Product Price: {{ object.price }}TL </div>
