--- a/GCard/payment/templates/payment/home.html
+++ b/GCard/payment/templates/payment/home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+s<!DOCTYPE html>
 <html >
 
 <head>
@@ -6,7 +6,8 @@
   <title>GCard</title>
   
   {% load static %}
-  <link rel='stylesheet prefetch' href='//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
   <link rel='stylesheet' href='{% static "css/index.css" %}'>
   <style>
   #czz {
@@ -17,38 +18,36 @@
 </head>
 
 <body translate="no" >
-  <div class="container">
-    <div class="well well-sm">
-        <strong>Display</strong>
-        <div class="btn-group">
-            <a rel="nofollow" rel="noreferrer"href="#" id="list" class="btn btn-default btn-sm"><span class="glyphicon glyphicon-th-list">
-            </span>List</a> <a rel="nofollow" rel="noreferrer"href="#" id="grid" class="btn btn-default btn-sm"><span
-                class="glyphicon glyphicon-th"></span>Grid</a>
-        </div>
-    </div>
-    <div id="products" class="row list-group">
-	{% for obj in object_list %}
-        <div class="item  col-xs-4 col-lg-4">
-            <div class="thumbnail">
-                <img class="group list-group-image" id="czz" src="{{obj.image}}" alt="{{obj.desc}}"/>
-                <div class="caption">
-                    <h4 class="group inner list-group-item-heading">
-                       {{obj.title}}</h4>
-                    <div class="row">
-                        <div class="col-xs-12 col-md-6">
-                            <p class="lead">
-                                {{obj.price}}TL</p>
-                        </div>
-                        <div class="col-xs-12 col-md-6">
-                            <a rel="nofollow" rel="noreferrer"class="btn btn-success" href="{% url 'product_detail' pk=obj.pk %}">Satın Al</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    {% endfor %}
-    </div>
-</div>
+<div class="wrapper">
+	<div class="desc">
+		<h1>GCARD ~ EW2C</h1>
+		<p>Express Way To E-Commerce Without Sharing Any CC Info / Mobile Info</p>
+	</div>
+
+	<div class="content">
+		<!-- content here -->
+		<div class="product-grid product-grid--flexbox">
+			<div class="product-grid__wrapper">
+				<!-- Product list start here -->
+				{% for obj in object_list %}
+				<div class="product-grid__product-wrapper">
+					<div class="product-grid__product">
+						<div class="product-grid__img-wrapper">			
+							<img src="{{ obj.image }}" alt="{{obj.title|title}}" class="product-grid__img" />
+						</div>
+						<span class="product-grid__title">{{obj.title|title}}</span>
+						<span class="product-grid__price">{{obj.price}} TL</span>
+						<div class="product-grid__extend-wrapper">
+							<div class="product-grid__extend">
+								<p class="product-grid__description">{{obj.desc}}</p>
+								<a href="{% url 'product_detail' pk=obj.pk %}"><span class="product-grid__btn product-grid__add-to-cart"><i class="fa fa-cart-arrow-down"></i>Buy</span></a>				
+								<a href="{% url 'product_detail' pk=obj.pk %}"></a><span class="product-grid__btn product-grid__view"><i class="fa fa-eye"></i>Detail Page</span></a>
+							</div>
+						</div>
+					</div>
+				</div>
+				{% endfor %}
+</body>
   <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
   <script src='//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js'></script>
 
@@ -62,5 +61,4 @@
   
   
 
-</body>
 </html>
