Buglar Fixlendi - Objects Not Found / F Not Found

--- a/GCard/payment/templates/payment/card_add_balance_form.html
+++ b/GCard/payment/templates/payment/card_add_balance_form.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Add Balance To Your Card</title>
 </head>
 <body>
 <form action="." method="POST">
