--- a/GCard/payment/templates/payment/home.html
+++ b/GCard/payment/templates/payment/home.html
@@ -58,8 +58,8 @@ li a:hover {
     <div class="header">
         <ul class="liste">
             <li><a href="{% url 'home' %}" class="active"><i class="fa fa-home">  Home</i></a></li>
-            <li><a href="{% url 'addd_balance' %}"><i class="fa fa-plus">  Add Balance</i></a></li>
-            <li><a href="{% url 'card' %}"><i class="fa fa-credit-card">  Card Info</i></a></li>
+            <li><a href="{% url 'add_balance' %}"><i class="fa fa-plus">  Add Balance</i></a></li>
+            <li><a href="{% url 'card_detail' %}"><i class="fa fa-credit-card">  Card Info</i></a></li>
         </ul>
     </div>
 <body translate="no" >
