--- a/GCard/payment/templates/payment/card_add_balance_form.html
+++ b/GCard/payment/templates/payment/card_add_balance_form.html
@@ -104,6 +104,7 @@ button:focus {
 	</div>
 	<div class="content">
 		<!-- content here -->
+        <center>
 		<div class="product-grid product-grid--flexbox">
 			<div class="product-grid__wrapper">
 				<form action="." method="POST">
@@ -111,7 +112,7 @@ button:focus {
 				{{form.as_p}}
 				<button type="submit">Save</button>
 				</form>
-</body>
+</body></center</center>>
   <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
     <script>
