--- a/GCard/payment/templates/payment/card_add_balance_form.html
+++ b/GCard/payment/templates/payment/card_add_balance_form.html
@@ -7,8 +7,8 @@
   
   {% load static %}
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="{% static 'font.min.css'%} ">
-  <link rel="stylesheet" href="{% static 'font.css'%} ">
+  <link rel="stylesheet" href="{% static 'css/font.min.css'%}">
+  <link rel="stylesheet" href="{% static 'css/font.css'%} ">
   <link rel='stylesheet' href='{% static "css/index.css" %}'>
   <style>
 
@@ -93,8 +93,12 @@ button:focus {
     <div class="header">
         <ul class="liste">
             <li><a href="{% url 'home' %}" class="active"><i class="fa fa-home">  Home</i></a></li>
-            <li><a href="{% url 'add_balance' %}"><i class="fa fa-plus">  Add Balance</i></a></li>
-            <li><a href="{% url 'card_detail' %}"><i class="fa fa-credit-card">  Card Info</i></a></li>
+            {% if request.user.is_authenticated %}
+            <li><a href="{% url 'add_balance' %}"><i class="fa fa-plus"> Add Balance </i></a></li> 
+            {% else %}
+            <li><a href="{% url "login" %}">Login</i></a></li>
+            {% endif %}
+            <li><a href="# {{ request.user.name }}"><i class="fa fa-profile">{{ request.user.username }}'s Account</i></a></li>
         </ul>
     </div>
 <body translate="no" onload="myFunction()" >
@@ -113,7 +117,7 @@ button:focus {
 				{{form.as_p}}
 				<button type="submit">Save</button>
 				</form>
-</body></center</center>>
+</body></center>
   <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
     <script>
