Temel Hatalar Fixlenemedi

--- a/GCard/payment/templates/payment/home.html
+++ b/GCard/payment/templates/payment/home.html
@@ -62,9 +62,14 @@ li a:hover {
             {% if request.user.is_authenticated %}
             <li><a href="{% url 'add_balance' %}"><i class="fa fa-plus"> Add Balance </i></a></li> 
             {% else %}
-            <li><a href="{% url "login" %}">Login</i></a></li>
+            <li><a href="{% url "login" %}"><i class="fa fa-key">Login</i></a></li>
             {% endif %}
-            <li class="sollum"><a href="#{{ request.user.name }}"><i class="fa fa-address-card">  {{ request.user.username }}'s Account</i></a></li>
+            {% if request.user.is_authenticated %}
+            <li class="sollum">
+            <a href="#{{ request.user.username }}" onclick="onayla()" >
+            <i class="fa fa-address-card">  {{ request.user.username }}'s Account</i></a></li>
+            {% else %}
+            {% endif %}
         </ul>
     </div>
 <body translate="no" >
@@ -105,6 +110,11 @@ li a:hover {
     $('#list').click(function(event){event.preventDefault();$('#products .item').addClass('list-group-item');});
     $('#grid').click(function(event){event.preventDefault();$('#products .item').removeClass('list-group-item');$('#products .item').addClass('grid-group-item');});
 });
+     function onayla(){
+    if(confirm("Are You Want Exit?")){
+        window.open("{% url 'logout' %}");
+    }
+  }
   </script>
 
   
