--- a/GCard/payment/templates/payment/card_add_balance_form.html
+++ b/GCard/payment/templates/payment/card_add_balance_form.html
@@ -81,13 +81,6 @@ input[type=text] {
     -webkit-transition: width 0.4s ease-in-out;
     transition: width 0.4s ease-in-out;
 }
-
-input[type=text]:focus {
-    width: 100%;
-}
-button:focus {
-    width: 100%;
-}
 </style>
 </head>
     <div class="header">
@@ -96,7 +89,7 @@ button:focus {
             {% if request.user.is_authenticated %}
             <li><a href="{% url 'add_balance' %}"><i class="fa fa-plus"> Add Balance </i></a></li> 
             {% else %}
-            <li><a href="{% url "login" %}">Login</i></a></li>
+            <li><a href="{% url "login" %}"><i class="fa fa-address-card">Login</i></a></li>
             {% endif %}
             <li><a href="# {{ request.user.name }}"><i class="fa fa-profile">{{ request.user.username }}'s Account</i></a></li>
         </ul>
@@ -116,8 +109,9 @@ button:focus {
 				{% csrf_token %}
 				{{form.as_p}}
 				<button type="submit">Save</button>
-				</form>
-</body></center>
+                </form></div></div>
+            </center>
+            </body>
   <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 
     <script>
