--- a/GCard/payment/templates/payment/signup.html
+++ b/GCard/payment/templates/payment/signup.html
@@ -57,7 +57,7 @@ li a:hover {
 button{
     background-color: #4CAF50;
     border: none;
-    width: 100%;
+    width: 50%;
     color: white;
     padding: 16px 32px;
     text-decoration: none;
@@ -67,8 +67,8 @@ button{
     -webkit-transition: width 0.4s ease-in-out;
 
 }
-input[type=text] {
-    width: 100%;
+input {
+    width: 50%;
     box-sizing: border-box;
     border: 2px solid #ccc;
     border-radius: 4px;
@@ -89,7 +89,7 @@ input[type=text] {
             {% if request.user.is_authenticated %}
             <li><a href="{% url 'add_balance' %}"><i class="fa fa-plus"> Add Balance </i></a></li> 
             {% else %}
-            <li><a href="{% url "login" %}"><i class="fa fa-address-card">Login</i></a></li>
+            <li><a href="{% url "login" %}"><i class="fa fa-key"> Login</i></a></li>
             <li><a href="{% url "register" %}"><i class="fa fa-address-card">Register</i></a></li>
             {% endif %}
             <li><a href="# {{ request.user.name }}"><i class="fa fa-profile">{{ request.user.username }}'s Account</i></a></li>
@@ -106,18 +106,14 @@ input[type=text] {
         <center>
 		<div class="product-grid product-grid--flexbox">
 			<div class="product-grid__wrapper">
-				<form action="." method="POST">
-				{% csrf_token %}
+				<form action="" method="POST">
+				
+                {% csrf_token %}
 				{{form.as_p}}
 				<button type="submit">Save</button>
                 </form></div></div>
             </center>
             </body>
   <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-
-    <script>
-	function myFunction(){document.body.innerHTML = document.body.innerHTML.replace('Card digits:', 'Main Card ID <br>');document.body.innerHTML = document.body.innerHTML.replace('Precard digits:', 'Pre Card ID <br>');}
-  </script>
-</html>
 </body>
 </html>	
