Dikkat Bug İçerirgit add .

--- a/GCard/payment/templates/payment/product_detail.html
+++ b/GCard/payment/templates/payment/product_detail.html
@@ -29,7 +29,7 @@
 		</div>
 		{% 
 		<div class="right">
-		  <p><a href="#">Buy IT</a></p>
+		  <p><a href="{% url 'buy' pk=object.pk %}">Buy IT</a></p>
 		</div>
 	  </div>
 	</div>
