Hiçbir Bug Temizlenemedi yeni buglar eklendi

--- a/GCard/payment/templates/payment/buy.html
+++ b/GCard/payment/templates/payment/buy.html
@@ -109,7 +109,7 @@ input[type=text] {
 				<form action="." method="POST">
 				{% csrf_token %}
 				{{form.as_p}}
-				<button type="submit">Save</button>
+				<button type="submit">Buy</button>
                 </form></div></div>
             </center>
             </body>
