--- a/GCard/payment/static/css/index.css
+++ b/GCard/payment/static/css/index.css
@@ -9,7 +9,37 @@ body {
 body * {
   box-sizing: inherit;
 }
+.topnav {
+    background-color: darkgray;
+    overflow: hidden;
+    width: 82%;
+    margin-left: 9%;
+    margin-right: 9%;
+    margin-top: 2%;
+    height: 75px;
+    border: 0.5px solid gray;
+    border-radius: 2px; 
+}
+.topnav a {
+	margin-top: 13px;
+    float: left;
+    display: block;
+    color: #f3f3f3;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
+}
 
+.topnav a:hover {
+    background-color: #ddd;
+    color: black;
+}
+
+.topnav a.active {
+    background-color: #4CAF50;
+    color: white;
+}
 .wrapper {
   width: 40em;
   margin: 4em auto;
