--- a/GCard/payment/templates/payment/card_add_balance_form.html
+++ b/GCard/payment/templates/payment/card_add_balance_form.html
@@ -11,47 +11,12 @@
   <link rel="stylesheet" href="{% static 'css/font.css'%} ">
   <link rel='stylesheet' href='{% static "css/index.css" %}'>
   <style>
-
-  #czz {
-	width: 300px;
-  height: 300px;}
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #a9a9a9;
-    height: 60px;
-    margin-top: 10px;
-    border-radius: 4px;
-}
-
-li {
-    float: left;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 22px 16px;
-    text-decoration: none;
-}
-
-/* Change the link color to #111 (black) on hover */
-li a:hover {
-    background-color: gray;
-}
-.active {
-    background-color: #4CAF50;
-    color: white;
-}
   .header {
+    margin-top: 40px;
+    margin-bottom: 40px;
     width: 81%;
     height: 86px;
     border-radius: 8px;
-    margin-left: auto;
-    margin-right: auto;
   }
    
 button{
@@ -74,7 +39,6 @@ input[type=text] {
     border-radius: 4px;
     font-size: 16px;
     background-color: white;
-    background-image: url('https://cdn0.iconfinder.com/data/icons/octicons/1024/credit-card-16.png');
     background-position: 10px 10px; 
     background-repeat: no-repeat;
     padding: 12px 20px 12px 40px;
@@ -83,18 +47,14 @@ input[type=text] {
 }
 </style>
 </head>
-    <div class="header">
-        <ul class="liste">
-            <li><a href="{% url 'home' %}" class="active"><i class="fa fa-home">  Home</i></a></li>
-            {% if request.user.is_authenticated %}
-            <li><a href="{% url 'add_balance' %}"><i class="fa fa-plus"> Add Balance </i></a></li> 
-            {% else %}
-            <li><a href="{% url "login" %}"><i class="fa fa-address-card">Login</i></a></li>
-            <li><a href="{% url "register" %}"><i class="fa fa-address-card">Register</i></a></li>
-            {% endif %}
-            <li><a href="# {{ request.user.name }}"><i class="fa fa-profile">{{ request.user.username }}'s Account</i></a></li>
-        </ul>
-    </div>
+<header>
+ <div class="topnav" id="myTopnav">
+  <a href="#home"><i class="fa fa-home">Home</i></a>
+  <a href="#news">News</a>
+  <a href="#contact">Contact</a>
+  <a href="#about">About</a>
+</div> 
+</header>
 <body translate="no" onload="myFunction()" >
     <div class="wrapper">
 	<div class="desc">
