--- a/GCard/payment/templates/payment/product_detail.html
+++ b/GCard/payment/templates/payment/product_detail.html
@@ -29,7 +29,7 @@
 		</div>
         {% if request.user.is_authenticated %}
 		<div class="right">
-		  <p><a href="{% url 'buy' pk=object.pk %}">Buy IT</a></p>
+		  <p><a href="{% url 'buy' pk=object.pk %}">Buy This Product</a></p>
 		</div>
 		{% else %}
 		<div class="right">
