Bug Adedi: 1 - Eklenecek Adet: 1

--- a/GCard/payment/static/css/index.css
+++ b/GCard/payment/static/css/index.css
@@ -267,3 +267,56 @@ body {
 .product-grid__view:hover {
   background: white;
 }
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+  .header {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    width: 81%;
+    height: 86px;
+    border-radius: 8px;
+  }
+   
+button{
+    background-color: #4CAF50;
+    border: none;
+    width: 100%;
+    color: white;
+    padding: 16px 32px;
+    text-decoration: none;
+    margin: 4px 2px;
+    cursor: pointer;
+    transition: width 0.4s ease-in-out;
+    -webkit-transition: width 0.4s ease-in-out;
+
+}
+input{
+    width: 100%;
+    box-sizing: border-box;
+    border: 2px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    background-image: url(https://cdn2.iconfinder.com/data/icons/aspneticons_v1.0_Nov2006/view_16x16.gif);
+    background-color: white;
+    background-position: 10px 10px; 
+    background-repeat: no-repeat;
+    padding: 12px 20px 12px 40px;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+}
