--- a/GCard/payment/templates/payment/buy.html
+++ b/GCard/payment/templates/payment/buy.html
@@ -10,91 +10,20 @@
   <link rel="stylesheet" href="{% static 'css/font.min.css'%}">
   <link rel="stylesheet" href="{% static 'css/font.css'%} ">
   <link rel='stylesheet' href='{% static "css/index.css" %}'>
-  <style>
-
-  #czz {
-	width: 300px;
-  height: 300px;}
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-    background-color: #a9a9a9;
-    height: 60px;
-    margin-top: 10px;
-    border-radius: 4px;
-}
-
-li {
-    float: left;
-}
-
-li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding: 22px 16px;
-    text-decoration: none;
-}
-
-/* Change the link color to #111 (black) on hover */
-li a:hover {
-    background-color: gray;
-}
-.active {
-    background-color: #4CAF50;
-    color: white;
-}
-  .header {
-    width: 81%;
-    height: 86px;
-    border-radius: 8px;
-    margin-left: auto;
-    margin-right: auto;
-  }
-   
-button{
-    background-color: #4CAF50;
-    border: none;
-    width: 100%;
-    color: white;
-    padding: 16px 32px;
-    text-decoration: none;
-    margin: 4px 2px;
-    cursor: pointer;
-    transition: width 0.4s ease-in-out;
-    -webkit-transition: width 0.4s ease-in-out;
-
-}
-input[type=text] {
-    width: 100%;
-    box-sizing: border-box;
-    border: 2px solid #ccc;
-    border-radius: 4px;
-    font-size: 16px;
-    background-color: white;
-    background-image: url('https://cdn0.iconfinder.com/data/icons/octicons/1024/credit-card-16.png');
-    background-position: 10px 10px; 
-    background-repeat: no-repeat;
-    padding: 12px 20px 12px 40px;
-    -webkit-transition: width 0.4s ease-in-out;
-    transition: width 0.4s ease-in-out;
-}
-</style>
 </head>
-    <div class="header">
-        <ul class="liste">
-            <li><a href="{% url 'home' %}" class="active"><i class="fa fa-home">  Home</i></a></li>
-            {% if request.user.is_authenticated %}
-            <li><a href="{% url 'add_balance' %}"><i class="fa fa-plus"> Add Balance </i></a></li> 
-            {% else %}
-            <li><a href="{% url "login" %}"><i class="fa fa-address-card">Login</i></a></li>
-            <li><a href="{% url "register" %}"><i class="fa fa-address-card">Register</i></a></li>
-            {% endif %}
-            <li><a href="# {{ request.user.name }}"><i class="fa fa-profile">{{ request.user.username }}'s Account</i></a></li>
-        </ul>
-    </div>
+<header>
+ <div class="topnav" id="myTopnav">
+  <a href="{% url 'home' %}"><i class="fa fa-home">&nbsp &nbsp Home &nbsp &nbsp</i></a>
+  {% if request.user.is_authenticated %}
+  <a href="{% url 'add_balance' %}"><i class="fa fa-plus">&nbsp &nbsp Add Balance &nbsp &nbsp</i></a>
+  <a href="{% url 'add_balance' %}"><i class="fa fa-money">&nbsp &nbsp <strong>Balance:&nbsp </strong>{{balance.balance}}TL  &nbsp &nbsp</i></a>
+  <a class="dropdown" onclick="onayla()" style="float: right;"><i class="fa fa-address-book-o">&nbsp &nbsp {{ request.user.username }}'s Account<div class="dropdown-content">{{ balance }}</div>&nbsp &nbsp </i>&nbsp &nbsp &nbsp &nbsp &nbsp &nbsp </a>
+  {% else %}
+  <a href="{% url 'login' %}"><i class="fa fa-key">&nbsp &nbsp Login &nbsp &nbsp </i></a>
+  <a href="{% url 'register' %}" style="float: right;"><i class="fa fa-address-book-o">&nbsp &nbsp Register &nbsp &nbsp </i></a>
+  {% endif %}
+</div> 
+</header>
 <body translate="no" onload="myFunction()" >
     <div class="wrapper">
 	<div class="desc">
